styles/fix(ContactElementContainer): layout on mobile version

--- a/src/components/ContactElementContainer/ContactElementContainer.scss
+++ b/src/components/ContactElementContainer/ContactElementContainer.scss
@@ -58,3 +58,20 @@ $imageIconEmailThemeNight: url('../../images/icon_email_theme_night.svg');
     }
   }
 }
+
+@media screen and (max-width: 900px) {
+  .contact-element-container {
+    margin-top: 10px;
+  }
+
+  .contact-element-container__link {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .contact-element-container__link-image {
+    background-size: 20px 20px;
+    width: 20px;
+    height: 20px;
+  }
+}
